--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvNotasLabel"
         tools:itemCount="10"
-        tools:listitem="@layout/item_nota"
+        tools:listitem="@layout/list_item_nota"
         tools:scrollbars="vertical"
         tools:spanCount="4" />
 
